--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: app-veralucia-confeitaria
+  AZURE_WEBAPP_NAME: veralucia-confeitaria
   AZURE_WEBAPP_PACKAGE_PATH: '.'
 
 jobs:
