📸 Feature: Instagram API integration com fallback

--- a/manifest.json
+++ b/manifest.json
@@ -1,53 +1,22 @@
 {
-    "name": "Vera Lúcia Confeitaria",
-    "short_name": "Vera Lúcia",
-    "description": "Bolos decorados personalizados, bolos caseirinhos e pães artesanais em Campinas",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#007aff",
-    "orientation": "portrait-primary",
-    "categories": ["food", "business", "shopping"],
-    "lang": "pt-BR",
-    "icons": [
-        {
-            "src": "favicon.svg",
-            "sizes": "any",
-            "type": "image/svg+xml",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "images/icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "images/icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
-    "shortcuts": [
-        {
-            "name": "Calculadora de Preços",
-            "short_name": "Calculadora",
-            "description": "Calcule o preço do seu bolo",
-            "url": "/?action=calculator",
-            "icons": [{ "src": "favicon.svg", "sizes": "96x96" }]
-        },
-        {
-            "name": "Galeria",
-            "short_name": "Galeria",
-            "description": "Veja nossos trabalhos",
-            "url": "/#galeria",
-            "icons": [{ "src": "favicon.svg", "sizes": "96x96" }]
-        },
-        {
-            "name": "WhatsApp",
-            "short_name": "Contato",
-            "description": "Fale conosco",
-            "url": "https://api.whatsapp.com/send/?phone=5519971307912",
-            "icons": [{ "src": "favicon.svg", "sizes": "96x96" }]
-        }
-    ]
+  "name": "Vera Lúcia Confeitaria",
+  "short_name": "Vera Lúcia",
+  "description": "Bolos personalizados e deliciosos",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#007AFF",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "images/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icon-512.png", 
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
